--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,17 @@
+name: Cypress Tests
 
-# This is a basic workflow to help you get started with Actions
+on: push
 
-name: CI
-
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   cypress-run:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    steps: 
+    runs-on: ubuntu-22.04
+    steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v2
-        with:
-            node:version: '16'
-      - name: Install dependencies
-        run: npm install       
+        uses: actions/checkout@v4
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v6
         with:
-          # TODO: Make normal variables
-          # https://github.com/cypress-io/github-action#env
-          env: ${{ secrets.CYPRESS_ENVIRONMENT }}
+          build: npm run build
+          start: npm start
