--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,23 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   cypress-run:
-    runs-on: ubuntu-22.04
-    container:
-      image: cypress/browsers:node18.12.0-chrome106-ff106
-      options: --user 1001
-    steps:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-20.04
+
+    steps: 
       - name: Checkout
-        uses: actions/checkout@v4
+       uses: actions/checkout@v4
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: npm run build
-          start: npm start
-          browser: chrome
+            node:version: '16'
+      - name: Install dependencies
+        run: npm install       
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          # TODO: Make normal variables
+          # https://github.com/cypress-io/github-action#env
+          env: ${{ secrets.CYPRESS_ENVIRONMENT }}
