--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
 
     steps: 
       - name: Checkout
-       uses: actions/checkout@v4
-      - name: Cypress run
+        uses: actions/checkout@v4
+      - name: Install node
         uses: cypress-io/github-action@v6
         with:
             node:version: '16'
