--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
     "repository": "git@github.com:GeroMija/publicGit.git",
     "author": "Nikitin Dmitriy <nikitin.dmitriy.qa@gmail.com>",
     "license": "MIT",
-    "dependencies": {
-        "cypress": "13.3.3"
-    },
     "scripts": {
         "cy:run": "cypress run",
         "cy:open": "cypress open"
     },
     "devDependencies": {
-        "@cypress/snapshot": "^2.1.7"
+        "@cypress/snapshot": "^2.1.7",
+        "cypress": "^13.6.6"
     }
 }
